// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popup > Popup baseVue demo works fine 1`] = `
<div
  class="popup-demo"
  data-v-c0baf305=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-c0baf305=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      顶部弹出
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-c0baf305=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      左侧弹出
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-c0baf305=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      中间弹出
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-c0baf305=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      底部弹出
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-c0baf305=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      右侧弹出
      
    </span>
    <!---->
  </button>
  
  <!--teleport start-->
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--top"
    style="padding: 100px; display: none;"
  >
    <!---->
    <!---->
  </div>
  
  <!--teleport end-->
</div>
`;

exports[`Popup > Popup customCloseVue demo works fine 1`] = `
<div
  class="popup-demo"
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      居中弹出层-带自定义关闭按钮
      
    </span>
    <!---->
  </button>
  <!--teleport start-->
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--center"
    style="width: 240px; height: 240px; display: none;"
  >
    <!---->
    
    <svg
      class="t-icon t-icon-close-circle close-btn"
      color="#fff"
    >
      <use
        href="#t-icon-close-circle"
      />
    </svg>
    
  </div>
  
  <!--teleport end-->
</div>
`;

exports[`Popup > Popup mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-12934826=""
>
  <h1
    class="title"
    data-v-12934826=""
  >
    Popup 弹窗层
  </h1>
  <p
    class="summary"
    data-v-12934826=""
  >
    由其他控件触发，屏幕滑出或弹出一块自定义内容区域。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-12934826=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础弹出层
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="popup-demo"
        data-v-12934826=""
        data-v-c0baf305=""
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-c0baf305=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            顶部弹出
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-c0baf305=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            左侧弹出
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-c0baf305=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            中间弹出
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-c0baf305=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            底部弹出
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-c0baf305=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            右侧弹出
            
          </span>
          <!---->
        </button>
        
        <!--teleport start-->
        
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--top"
          style="padding: 100px; display: none;"
        >
          <!---->
          <!---->
        </div>
        
        <!--teleport end-->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-12934826=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件示例
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        应用示例
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="popup-demo"
        data-v-12934826=""
        data-v-342d27ca=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-342d27ca=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            底部弹出层-带标题及操作 
            
          </span>
          <!---->
        </button>
        <!--teleport start-->
        
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--bottom"
          style="height: 258px; display: none;"
        >
          <!---->
          
          <div
            class="header"
            data-v-342d27ca=""
          >
            <div
              aria-role="button"
              class="btn btn--cancel"
              data-v-342d27ca=""
            >
              取消
            </div>
            <div
              class="title"
              data-v-342d27ca=""
            >
              标题文字
            </div>
            <div
              aria-role="button"
              class="btn btn--confirm"
              data-v-342d27ca=""
            >
              确定
            </div>
          </div>
          
        </div>
        
        <!--teleport end-->
      </div>
      <div
        class="popup-demo"
        data-v-12934826=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            居中弹出层-带自定义关闭按钮
            
          </span>
          <!---->
        </button>
        <!--teleport start-->
        
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--center"
          style="width: 240px; height: 240px; display: none;"
        >
          <!---->
          
          <svg
            class="t-icon t-icon-close-circle close-btn"
            color="#fff"
          >
            <use
              href="#t-icon-close-circle"
            />
          </svg>
          
        </div>
        
        <!--teleport end-->
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Popup > Popup withTitleVue demo works fine 1`] = `
<div
  class="popup-demo"
  data-v-342d27ca=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-342d27ca=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      底部弹出层-带标题及操作 
      
    </span>
    <!---->
  </button>
  <!--teleport start-->
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="height: 258px; display: none;"
  >
    <!---->
    
    <div
      class="header"
      data-v-342d27ca=""
    >
      <div
        aria-role="button"
        class="btn btn--cancel"
        data-v-342d27ca=""
      >
        取消
      </div>
      <div
        class="title"
        data-v-342d27ca=""
      >
        标题文字
      </div>
      <div
        aria-role="button"
        class="btn btn--confirm"
        data-v-342d27ca=""
      >
        确定
      </div>
    </div>
    
  </div>
  
  <!--teleport end-->
</div>
`;
